[gd_scene load_steps=4 format=3 uid="uid://vvet7yb7thao"]

[ext_resource type="Script" path="res://scripts/level_info_query.gd" id="1_1u8ky"]
[ext_resource type="Texture2D" uid="uid://3pa7rasuahih" path="res://assets/scenes/minus.png" id="1_m0kci"]
[ext_resource type="Texture2D" uid="uid://d2o30sudsvfdm" path="res://assets/scenes/plus.png" id="2_dqltn"]

[node name="LevelInfoQuery" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1u8ky")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -336.5
offset_top = -240.5
offset_right = 336.5
offset_bottom = 240.5
grow_horizontal = 2
grow_vertical = 2

[node name="WidthContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="WidthName" type="Label" parent="VBoxContainer/WidthContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 100
text = "WIDTH
"

[node name="MinusWidth" type="TextureRect" parent="VBoxContainer/WidthContainer"]
layout_mode = 2
texture = ExtResource("1_m0kci")
expand_mode = 2
stretch_mode = 5

[node name="WidthValue" type="Label" parent="VBoxContainer/WidthContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 100
text = "0
"

[node name="PlusWidth" type="TextureRect" parent="VBoxContainer/WidthContainer"]
layout_mode = 2
texture = ExtResource("2_dqltn")
expand_mode = 2
stretch_mode = 5

[node name="HeightContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="HeightName" type="Label" parent="VBoxContainer/HeightContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 100
text = "WIDTH
"

[node name="MinusHeight" type="TextureRect" parent="VBoxContainer/HeightContainer"]
layout_mode = 2
texture = ExtResource("1_m0kci")
expand_mode = 2
stretch_mode = 5

[node name="HeightValue" type="Label" parent="VBoxContainer/HeightContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 100
text = "0
"

[node name="PlusHeight" type="TextureRect" parent="VBoxContainer/HeightContainer"]
layout_mode = 2
texture = ExtResource("2_dqltn")
expand_mode = 2
stretch_mode = 5

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2

[node name="Confirm" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 100
text = "BUILD"

[connection signal="gui_input" from="VBoxContainer/WidthContainer/MinusWidth" to="." method="_on_minus_width_gui_input"]
[connection signal="gui_input" from="VBoxContainer/WidthContainer/PlusWidth" to="." method="_on_plus_width_gui_input"]
[connection signal="gui_input" from="VBoxContainer/HeightContainer/MinusHeight" to="." method="_on_minus_height_gui_input"]
[connection signal="gui_input" from="VBoxContainer/HeightContainer/PlusHeight" to="." method="_on_plus_height_gui_input"]
[connection signal="pressed" from="VBoxContainer/Confirm" to="." method="_on_confirm_pressed"]
